--- a/Home/styles.css
+++ b/Home/styles.css
@@ -26,17 +26,18 @@ body{
 }
 
 header{
+    background-color: #000000;
     position: fixed;
     top: 0;
     right: 0;
     width: 100%;
     z-index: 1000;
-    background: var(--bg-color);
+    /* background: var(--bg-color); */
     box-shadow: 0 1px 6px 0 rgb(32 33 36 / 5%);
     padding: 18px 14%;
     display:flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content:space-around;
     transition: all .6s;
 }
 
@@ -44,38 +45,47 @@ header{
     font-size: 33px;
     font-weight: 800;
     text-transform: uppercase;
-    color: var(--text-color);
+    /* color: var(--text-color); */
+    color: white;
 }
 
 .navlist{
     display: flex;
 }
+
 .navlist a{
     display: inline-block;
     margin: 0 30px;
     font-size: var(--p-font);
     font-weight: 500;
-    color: var(--text-color);
+    /* color: var(--text-color); */
+    color: white;
     transition: all .6s;
 }
+
 .navlist a:hover{
     transform: translateY(-4px);
-    color: var(--second-color);
+    /* color: var(--second-color); */
 }
+
 .nav-right{
     display: flex;
     align-items: center;
 }
+
 .nav-right a{
     display: inline-block;
     font-size: 22px;
-    color: var(--text-color);
+    /* color: var(--text-color); */
+    color: white;
     margin: 0 20px;
     transition: all .6s;
 }
+
 .nav-right a:hover{
     transform: translateY(-5px) scale(1.1);
 }
+
 #menu-icon{
     font-size: 35px;
     color: var(--text-color);
@@ -90,25 +100,29 @@ section{
 }
 
 .home{
+    margin-top: 25px;
     position: relative;
     height: 100vh;
     width: 100%;
-    background: url('');
+    background: url('../assets/Main BG/home_bg.png');
     background-size: cover;
     background-position: center;
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
+
 .home-text{
     padding-top: 60px;
 }
+
 .home-text h1{
     font-size: var(--h1-font);
     font-weight: 700;
     line-height: 1.1;
     margin-bottom: 20px;
 }
+
 .home-text h6{
     font-size: 15px;
     font-weight: 500;
@@ -117,6 +131,7 @@ section{
     text-transform: uppercase;
     margin-bottom: 10px;
 }
+
 .home-text p{
     width: 100%;
     max-width: 560px;
@@ -126,6 +141,7 @@ section{
     line-height: 33px;
     margin-bottom: 35px;
 }
+
 .btn{
     display: inline-block;
     padding: 14px 42px;
@@ -136,6 +152,7 @@ section{
     border: 2px solid transparent;
     transition: all .6s;
 }
+
 .btn:hover{
     transform: scale(0.9) translateY(-6px);
     border: 2px solid var(--text-color);
@@ -150,7 +167,7 @@ section{
     padding: 30px 14%;
     background: var(--text-color);
 }
-.main-brands{
+/* .main-brands{
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
@@ -162,7 +179,24 @@ section{
     width: 100%;
     height: auto;
     flex-shrink: 0;
+} */
+
+.main-brands {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content:space-evenly;
+    gap: 10px;
+    overflow-x: auto;
 }
+
+.brands-c img {
+    width: 150px; /* Set a fixed width */
+    height: 150px; /* Set a fixed height */
+    object-fit: contain; /* Maintain aspect ratio within the given size */
+    flex-shrink: 0;
+}
+
 
 .center-text{
     text-align: center;
@@ -182,7 +216,9 @@ section{
 .row-img{
     overflow: hidden;
     border-radius: 28px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+    /* height: 400px;
+    width: 250px; */
 }
 .row-img img{
     display: block;
